--- a/app/src/main/res/layout/activity_recognition_firebase.xml
+++ b/app/src/main/res/layout/activity_recognition_firebase.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.tflitecamerademo.RecognitionFirebase.RecognitionFirebaseActivity">
+    tools:context="com.example.android.tflitecamerademo.info.hannes.tflitecamera.recognitionFirebase.RecognitionFirebaseActivity">
 
     <Button
         android:layout_margin="10dp"
