More Kotlin conversions

--- a/app/src/main/res/layout-land/fragment_camera2_basic.xml
+++ b/app/src/main/res/layout-land/fragment_camera2_basic.xml
@@ -18,7 +18,7 @@
     android:layout_height="match_parent">
 
     <info.hannes.tflitecamera.recognitionObjects.AutoFitTextureView
-        android:id="@+id/texture"
+        android:id="@+id/textureView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
