--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -49,7 +49,7 @@
 
             <TextView
                 android:layout_weight="1"
-                android:id="@+id/text"
+                android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingTop="20dp"
@@ -59,7 +59,7 @@
 
             <TextView
                 android:layout_weight="1"
-                android:id="@+id/text2"
+                android:id="@+id/textViewGesture"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
