--- a/app/src/main/res/layout/fragment_camera2_basic.xml
+++ b/app/src/main/res/layout/fragment_camera2_basic.xml
@@ -36,7 +36,7 @@
         android:layout_alignParentStart="true"
         android:background="@color/control_background">
 
-        <TextView android:id="@+id/text"
+        <TextView android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="80dp"
