--- a/app/src/main/res/layout-land/fragment_camera_basic.xml
+++ b/app/src/main/res/layout-land/fragment_camera_basic.xml
@@ -14,35 +14,36 @@
  limitations under the License.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <info.hannes.tflitecamera.recognitionObjects.AutoFitTextureView
-        android:id="@+id/texture"
+    <info.hannes.tflitecamera.AutoFitTextureView
+        android:id="@+id/textureView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
-
 
     <FrameLayout
         android:id="@+id/control"
         android:layout_width="match_parent"
-        android:layout_height="112dp"
-        android:layout_margin="10dp"
-        android:elevation="10dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:background="@color/control_background">
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/texture"
+        android:background="@color/control_background"
+        android:orientation="horizontal">
 
-        <TextView android:id="@+id/textView"
+        <TextView android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="80dp"
+            android:paddingTop="20dp"
             android:textColor="#FFF"
             android:textSize="20sp"
             android:textStyle="bold" />
+
 
     </FrameLayout>
 
