--- a/app/src/main/res/layout/fragment_camera_gesture.xml
+++ b/app/src/main/res/layout/fragment_camera_gesture.xml
@@ -17,59 +17,57 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <info.hannes.tflitecamera.recognitionObjectsTensorFlow.AutoFitTextureView2
+    <info.hannes.tflitecamera.AutoFitTextureView
         android:id="@+id/texture2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true" />
 
     <FrameLayout
         android:id="@+id/control"
         android:layout_width="match_parent"
         android:layout_height="125dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="457dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/control_background"
         android:orientation="horizontal">
 
         <LinearLayout
-            android:weightSum="2"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <TextView
-                android:layout_weight="1"
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:paddingTop="20dp"
                 android:textColor="#FFF"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
-                android:layout_weight="1"
                 android:id="@+id/textViewGesture"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center"
                 android:paddingTop="20dp"
                 android:textColor="#FFF"
                 android:textSize="40sp"
                 android:textStyle="bold" />
         </LinearLayout>
-
-
 
 
     </FrameLayout>
