--- a/app/src/main/res/layout/fragment_camera_basic.xml
+++ b/app/src/main/res/layout/fragment_camera_basic.xml
@@ -18,7 +18,7 @@
     android:layout_height="match_parent">
 
     <info.hannes.tflitecamera.AutoFitTextureView
-        android:id="@+id/texture"
+        android:id="@+id/textureBasic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -35,7 +35,7 @@
         android:elevation="10dp">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textBasicView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="80dp"
