--- a/app/src/main/res/layout/fragment_camera_gesture.xml
+++ b/app/src/main/res/layout/fragment_camera_gesture.xml
@@ -18,7 +18,7 @@
     android:layout_height="match_parent">
 
     <info.hannes.tflitecamera.AutoFitTextureView
-        android:id="@+id/texture2"
+        android:id="@+id/textureGesture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -48,7 +48,7 @@
             android:weightSum="2">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textGestureView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
